# comparator

./: .gitignore  flake.nix  pyproject.toml  simple-script.sh
bme/: __init__.py  bme.py
comparator/: __init__.py
